1.2.1 - TBD
    * Made the Launcher less verbose in the absence of errors
    * The debug console now does not close automatically if the Chunky process
    exits abnormally
    * If the Chunky process fails the launcher will no longer close directly
    and will instead display a dialog informing the user of the abnormal
    Chunky termination
    * Added Launch Error dialog which displays if Chunky failed to launch
    * Fixed error that caused a render dump to be saved each frame if the
    "save dump" checkbox was unchecked
    * Fixed error in launcher which forced launcher to display even during
    batch/headless mode
    * Removed the -watermark command-line option
    * Trapped chests now use trapped chest textures
    * Double trapped chests now appear as they should (rather than two single
    chests)
    * Added Acacia Slabs
    * Added Dark Oak Slabs
    * Added Acacia Stairs
    * Added Dark Oak Stairs

1.2.0 - 2013-12-30
    * Reduced Chunky binary size by removing some redundancies
    (Windows installer is now 3.8 megabytes, was 8.9)
    * Added new icons in the Render Controls dialog
    * Changed the title of the "HALT" button to "RESET"
    * Added stained glass panes
    * Pressing return in the scene name field now saves the scene
    * Added large flowers
    * Added new small flowers
    * Added new biome color data
    * Added Red Sand
    * Trapdoors connected to the top of a block now display correctly
    * Wood logs now use the new top/bottom textures
    * Added Packed Ice
    * Added Podzol
    * Added Acacia and Dark Oak logs/planks/saplings
    * Render snapshots are now not saved by default, but there is a new
    checkbox to enable the render snapshots in the Render Controls dialog.
    * It is now possible to set a custom dump frequency
    * Changed scene description format to JSON - not backward compatible with
    the old CVF format which was NBT based
    * Changed default scene directory name to "scenes" (lowercase initial)