@@ -1,4 +1,6 @@
 1.2.1 - TBD
+    * Fixed error in the scene selector which caused all scenes to try to load
+    their respective skymaps
     * Made the Launcher less verbose in the absence of errors
     * The debug console now does not close automatically if the Chunky process
     exits abnormally
